--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ python:
   - "3.6-dev" # 3.6 development branch
   - "nightly" # currently points to 3.7-dev
 install:
+ - pip install -r requirements.txt
  - pip install -q Django==$DJANGO_VERSION
 script: python runtests.py
 env:
